// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|CardDeck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ae"
      data-baseweb="block"
    >
      <h2
        className="af ag ah ai aj"
        data-baseweb="block"
      >
        Popular movies
      </h2>
      <div
        className="ak al ae"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <ul
          className="am an ao ak ap aq ar as at au av"
        >
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b7 b8 bf bg bd bh be bi"
                src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
              />
              <div
                className="bj bk bl bm"
              >
                <h1
                  className="ag bn bo bp bq br bs bt bu bv bw bx by bz c0 c1 c2 c3"
                >
                  July 26
                </h1>
                <div
                  className="c4 c5 ag c6 c7 c8"
                />
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b7 b8 bf bg bd bh be bi"
                src="https://image.tmdb.org/t/p/w500/vqzNJRH4YyquRiWxCCOH0aXggHI.jpg"
              />
              <div
                className="bj bk bl bm"
              >
                <h1
                  className="ag bn bo bp bq br bs bt bu bv bw bx by bz c0 c1 c2 c3"
                >
                  November 1
                </h1>
                <div
                  className="c4 c5 ag c6 c7 c8"
                />
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b7 b8 bf bg bd bh be bi"
                src="https://image.tmdb.org/t/p/w500/tBuabjEqxzoUBHfbyNbd8ulgy5j.jpg"
              />
              <div
                className="bj bk bl bm"
              >
                <h1
                  className="ag bn bo bp bq br bs bt bu bv bw bx by bz c0 c1 c2 c3"
                >
                  October 18
                </h1>
                <div
                  className="c4 c5 ag c6 c7 c8"
                />
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b7 b8 bf bg bd bh be bi"
                src="https://image.tmdb.org/t/p/w500/p69QzIBbN06aTYqRRiCOY1emNBh.jpg"
              />
              <div
                className="bj bk bl bm"
              >
                <h1
                  className="ag bn bo bp bq br bs bt bu bv bw bx by bz c0 c1 c2 c3"
                >
                  November 8
                </h1>
                <div
                  className="c4 c5 ag c6 c7 c8"
                />
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b7 b8 bf bg bd bh be bi"
                src="https://image.tmdb.org/t/p/w500/pIcV8XXIIvJCbtPoxF9qHMKdRr2.jpg"
              />
              <div
                className="bj bk bl bm"
              >
                <h1
                  className="ag bn bo bp bq br bs bt bu bv bw bx by bz c0 c1 c2 c3"
                >
                  October 18
                </h1>
                <div
                  className="c4 c5 ag c6 c7 c8"
                />
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b7 b8 bf bg bd bh be bi"
                src="https://image.tmdb.org/t/p/w500/7IiTTgloJzvGI1TAYymCfbfl3vT.jpg"
              />
              <div
                className="bj bk bl bm"
              >
                <h1
                  className="ag bn bo bp bq br bs bt bu bv bw bx by bz c0 c1 c2 c3"
                >
                  October 11
                </h1>
                <div
                  className="c4 c5 ag c6 c7 c8"
                />
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="b7 b8 bf bg bd bh be bi"
                src="https://image.tmdb.org/t/p/w500/jIbTPKCRWgmS2HaafKXeRaPHMGp.jpg"
              />
              <div
                className="bj bk bl bm"
              >
                <h1
                  className="ag bn bo bp bq br bs bt bu bv bw bx by bz c0 c1 c2 c3"
                >
                  November 8
                </h1>
                <div
                  className="c4 c5 ag c6 c7 c8"
                />
              </div>
            </div>
          </li>
        </ul>
        <button
          className="c9 ca cb bc cc cd ce cf cg ch ci cj ck cl"
          onClick={[Function]}
        >
          &lt;
        </button>
        <button
          className="c9 ca cb bc cc cd ce cf cg ch ci cj ck cm"
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|CardDeck Loading 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ae"
      data-baseweb="block"
    >
      <h2
        className="af ag ah ai aj"
        data-baseweb="block"
      >
        Popular movies
      </h2>
      <div
        className="ak al ae"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <ul
          className="am an ao ak ap aq ar as at au av"
        >
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bd be"
              data-baseweb="card"
            >
              <div
                className="bj bk bl bm"
              >
                <div
                  className="c4 c5 ag c6 c7 c8"
                >
                  <div
                    className="c4 cn ag c6 c7 c8"
                  >
                    <div
                      className="ak bh co bi"
                      data-baseweb="block"
                    />
                    <div
                      className="cp ak cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cp cr cq"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bd be"
              data-baseweb="card"
            >
              <div
                className="bj bk bl bm"
              >
                <div
                  className="c4 c5 ag c6 c7 c8"
                >
                  <div
                    className="c4 cn ag c6 c7 c8"
                  >
                    <div
                      className="ak bh co bi"
                      data-baseweb="block"
                    />
                    <div
                      className="cp ak cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cp cr cq"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bd be"
              data-baseweb="card"
            >
              <div
                className="bj bk bl bm"
              >
                <div
                  className="c4 c5 ag c6 c7 c8"
                >
                  <div
                    className="c4 cn ag c6 c7 c8"
                  >
                    <div
                      className="ak bh co bi"
                      data-baseweb="block"
                    />
                    <div
                      className="cp ak cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cp cr cq"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bd be"
              data-baseweb="card"
            >
              <div
                className="bj bk bl bm"
              >
                <div
                  className="c4 c5 ag c6 c7 c8"
                >
                  <div
                    className="c4 cn ag c6 c7 c8"
                  >
                    <div
                      className="ak bh co bi"
                      data-baseweb="block"
                    />
                    <div
                      className="cp ak cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cp cr cq"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bd be"
              data-baseweb="card"
            >
              <div
                className="bj bk bl bm"
              >
                <div
                  className="c4 c5 ag c6 c7 c8"
                >
                  <div
                    className="c4 cn ag c6 c7 c8"
                  >
                    <div
                      className="ak bh co bi"
                      data-baseweb="block"
                    />
                    <div
                      className="cp ak cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cp cr cq"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bd be"
              data-baseweb="card"
            >
              <div
                className="bj bk bl bm"
              >
                <div
                  className="c4 c5 ag c6 c7 c8"
                >
                  <div
                    className="c4 cn ag c6 c7 c8"
                  >
                    <div
                      className="ak bh co bi"
                      data-baseweb="block"
                    />
                    <div
                      className="cp ak cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cp cr cq"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </div>
          </li>
          <li
            className="aw ax"
          >
            <div
              className="ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bd be"
              data-baseweb="card"
            >
              <div
                className="bj bk bl bm"
              >
                <div
                  className="c4 c5 ag c6 c7 c8"
                >
                  <div
                    className="c4 cn ag c6 c7 c8"
                  >
                    <div
                      className="ak bh co bi"
                      data-baseweb="block"
                    />
                    <div
                      className="cp ak cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cq"
                      data-baseweb="block"
                    />
                    <div
                      className="cp cr cq"
                      data-baseweb="block"
                    />
                  </div>
                </div>
              </div>
            </div>
          </li>
        </ul>
        <button
          className="c9 ca cb bc cc cd ce cf cg ch ci cj ck cl"
          onClick={[Function]}
        >
          &lt;
        </button>
        <button
          className="c9 ca cb bc cc cd ce cf cg ch ci cj ck cm"
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Credit Cast 1`] = `
Array [
  <div
    className=""
  >
    <div>
      <div
        className="cs ct cu cv cw cx cy cz aq d0 ap ar bk"
      >
        <div
          className="ak d1 d2 d3"
          role="rowgroup"
        >
          <div
            className="aq d4"
            role="row"
          >
            <div
              className="ag d5 c7 d6 c5 aq d3 bw bx by bv"
            >
              <div
                className="d7 d8 bv bx aq"
              >
                <div
                  className="d9 da db"
                >
                  <div
                    aria-label={null}
                    className="dc dd de df ax dg"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Carrie Fisher"
                      className="dc dd de df ax dh di dj dk"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/rfJtncHewKVnHjqpIZvjn24ESeC.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dl da dm dn"
                >
                  <div
                    className="bq ag c7 cg aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Carrie Fisher
                  </div>
                  <div
                    className="cn ag bo d5 do"
                    data-baseweb="typo-labelsmall"
                  >
                    General Leia Organa
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq d4"
            role="row"
          >
            <div
              className="ag d5 c7 d6 c5 aq d3 bw bx by bv"
            >
              <div
                className="d7 d8 bv bx aq"
              >
                <div
                  className="d9 da db"
                >
                  <div
                    aria-label={null}
                    className="dc dd de df ax dg"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Mark Hamill"
                      className="dc dd de df ax dh di dj dk"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/fk8OfdReNltKZqOk2TZgkofCUFq.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dl da dm dn"
                >
                  <div
                    className="bq ag c7 cg aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Mark Hamill
                  </div>
                  <div
                    className="cn ag bo d5 do"
                    data-baseweb="typo-labelsmall"
                  >
                    Luke Skywalker
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq d4"
            role="row"
          >
            <div
              className="ag d5 c7 d6 c5 aq d3 bw bx by bv"
            >
              <div
                className="d7 d8 bv bx aq"
              >
                <div
                  className="d9 da db"
                >
                  <div
                    aria-label={null}
                    className="dc dd de df ax dg"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Adam Driver"
                      className="dc dd de df ax dh di dj dk"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/rsjwgpV2OukxOJ9HEiEyf4qu1vR.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dl da dm dn"
                >
                  <div
                    className="bq ag c7 cg aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Adam Driver
                  </div>
                  <div
                    className="cn ag bo d5 do"
                    data-baseweb="typo-labelsmall"
                  >
                    Kylo Ren
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq d4"
            role="row"
          >
            <div
              className="ag d5 c7 d6 c5 aq d3 bw bx by bv"
            >
              <div
                className="d7 d8 bv bx aq"
              >
                <div
                  className="d9 da db"
                >
                  <div
                    aria-label={null}
                    className="dc dd de df ax dg"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Daisy Ridley"
                      className="dc dd de df ax dh di dj dk"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/oP7khxQ6BUNoGiPFUCI8dikN0ew.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dl da dm dn"
                >
                  <div
                    className="bq ag c7 cg aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Daisy Ridley
                  </div>
                  <div
                    className="cn ag bo d5 do"
                    data-baseweb="typo-labelsmall"
                  >
                    Rey
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="aq d4"
            role="row"
          >
            <div
              className="ag d5 c7 d6 c5 aq d3 bw bx by bv"
            >
              <div
                className="d7 d8 bv bx aq"
              >
                <div
                  className="d9 da db"
                >
                  <div
                    aria-label={null}
                    className="dc dd de df ax dg"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="John Boyega"
                      className="dc dd de df ax dh di dj dk"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/idr2vphzhidyMGOp0ky6RqUMah8.jpg"
                    />
                  </div>
                </div>
                <div
                  className="dl da dm dn"
                >
                  <div
                    className="bq ag c7 cg aj"
                    data-baseweb="typo-paragraphlarge"
                  >
                    John Boyega
                  </div>
                  <div
                    className="cn ag bo d5 do"
                    data-baseweb="typo-labelsmall"
                  >
                    Finn
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="dp dq aq"
    >
      <div
        aria-label="pagination"
        className="aq d4 c5 ag c6 bo d6"
        data-baseweb="pagination"
      >
        <button
          className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 e5 e6 br bs bt e7 ag c6 ai d6 b8 ba b7 b9 e8 e9 ea eb cn cv ec ed ee ef eg eh"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &lt;
        </button>
        <div
          className="ae dn ei ej"
        >
          <div
            aria-controls={null}
            aria-expanded="false"
            aria-haspopup="true"
            className="ag c6 c7 c8 ax ae ak"
            data-baseweb="select"
            onClick={[Function]}
          >
            <div
              className="b7 b8 ba b9 ax al ak aq ek bc el ct em e2 e3 c5 en cv eo"
              onClick={[Function]}
              onKeyDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="ax ae dl ep eq aq d4 er al es et eu bx"
              >
                <div
                  aria-selected="true"
                  className="d6 ax ev ap bg al ew ex ey ae bw by ez f0 c5 ag c6 bo"
                  disabled={false}
                  value={1}
                >
                  1
                </div>
                <div
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-label={null}
                  aria-labelledby={null}
                  aria-required={null}
                  className="ae dg bg cv cd eo ax dz bs e7 br bt bw by bv bx f1 f2"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                />
              </div>
              <div
                className="ax ae aq da d4 f3 f0"
              >
                <svg
                  className="dg f4 c5 f1 f5 bc"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-label="page 1 of 6"
          className="f6 f7 cv cn"
        >
          of 6
        </span>
        <button
          className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 e5 e6 br bs bt e7 ag c6 ai d6 b8 ba b7 b9 e8 e9 ea eb cn cv ec ed ee ef eg eh"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Credit Crew 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="f8"
      data-baseweb="block"
    >
      <div
        className="d7 d8 bv bx aq"
      >
        <div
          className="d9 da db"
        >
          <div
            aria-label={null}
            className="dc dd de df ax dg"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="J.J. Abrams"
              className="dc dd de df ax dh di dj dk"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/h0o12c399M5hTKWl0qdgwhaddNt.jpg"
            />
          </div>
        </div>
        <div
          className="dl da dm dn"
        >
          <div
            className="bq ag c7 cg aj"
            data-baseweb="typo-paragraphlarge"
          >
            J.J. Abrams
          </div>
          <div
            className="cn ag bo d5 do"
            data-baseweb="typo-labelsmall"
          >
            Screenplay, Director, Story
          </div>
        </div>
      </div>
      <div
        className="d7 d8 bv bx aq"
      >
        <div
          className="d9 da db"
        >
          <div
            aria-label={null}
            className="dc dd de df ax dg"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="Chris Terrio"
              className="dc dd de df ax dh di dj dk"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/oljJKka3NTgiQhqhDs1SaCtcWMW.jpg"
            />
          </div>
        </div>
        <div
          className="dl da dm dn"
        >
          <div
            className="bq ag c7 cg aj"
            data-baseweb="typo-paragraphlarge"
          >
            Chris Terrio
          </div>
          <div
            className="cn ag bo d5 do"
            data-baseweb="typo-labelsmall"
          >
            Screenplay, Story
          </div>
        </div>
      </div>
      <div
        className="d7 d8 bv bx aq"
      >
        <div
          className="d9 da db"
        >
          <div
            aria-label={null}
            className="dc dd de df ax dg"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="Colin Trevorrow"
              className="dc dd de df ax dh di dj dk"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/i0HBClPMPKn3aq8QeQqyThS67EK.jpg"
            />
          </div>
        </div>
        <div
          className="dl da dm dn"
        >
          <div
            className="bq ag c7 cg aj"
            data-baseweb="typo-paragraphlarge"
          >
            Colin Trevorrow
          </div>
          <div
            className="cn ag bo d5 do"
            data-baseweb="typo-labelsmall"
          >
            Story
          </div>
        </div>
      </div>
      <div
        className="d7 d8 bv bx aq"
      >
        <div
          className="d9 da db"
        >
          <div
            aria-label={null}
            className="dc dd de df ax dg"
            data-baseweb="avatar"
            role={null}
          >
            <img
              alt="Derek Connolly"
              className="dc dd de df ax dh di dj dk"
              onError={[Function]}
              src="https://image.tmdb.org/t/p/w185/k1VQLCP4RAAkuXZ5HWrdL1NQnWR.jpg"
            />
          </div>
        </div>
        <div
          className="dl da dm dn"
        >
          <div
            className="bq ag c7 cg aj"
            data-baseweb="typo-paragraphlarge"
          >
            Derek Connolly
          </div>
          <div
            className="cn ag bo d5 do"
            data-baseweb="typo-labelsmall"
          >
            Story
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Header Loading 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bb ax ak f9 fa fb fc fd fe ff"
    >
      <div
        className="aq"
      >
        <div
          className="dl ep fg ck fh"
        >
          <div
            className="ck h7 h8 fh h9 ak ha"
            data-baseweb="block"
          />
        </div>
        <div
          className="dl ep eq ck fh"
        />
        <div
          className="fj ep fk fl"
        >
          <div
            className="ck h7 h8 fh h9 ak ha"
            data-baseweb="block"
          />
        </div>
      </div>
      <div
        className="ak aq fm ek ax fn fo fp fq fr fs ft fu"
      >
        <div
          className="dl ep fv aq fw fx fy fz g0"
        >
          <div
            className="cp hb hc gr"
            data-baseweb="block"
          />
          <div
            className="cp hd hc"
            data-baseweb="block"
          />
          <div
            className="cq"
            data-baseweb="block"
          />
          <div
            className="cp hb hc gr"
            data-baseweb="block"
          />
          <div
            className="cp hd hc"
            data-baseweb="block"
          />
        </div>
        <div
          className="fj ep fk"
        >
          <h1
            className="g4 ce ag ah bo aj g5 g6 g7 g8 g9 ga gb gc"
          >
            <div
              className="cp he hf"
              data-baseweb="block"
            />
          </h1>
          <h2
            className="gd ag d5 bo do g5 ge g7 gf g9 gg gb gh"
          >
            <div
              className="cp hd hg"
              data-baseweb="block"
            />
          </h2>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Header Movie 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bb ax ak f9 fa fb fc fd fe ff"
    >
      <div
        className="aq"
      >
        <div
          className="dl ep fg ck fh"
        >
          <img
            alt="No poster"
            className="ak fi"
            data-baseweb="block"
            src="https://image.tmdb.org/t/p/w500/db32LaOibwEliAmSL2jjDF6oDdj.jpg"
          />
        </div>
        <div
          className="dl ep eq ck fh"
        />
        <div
          className="fj ep fk fl"
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": undefined,
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <div />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ak aq fm ek ax fn fo fp fq fr fs ft fu"
      >
        <div
          className="dl ep fv aq fw fx fy fz g0"
        >
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#f9b248"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#f9b248",
                  }
                }
                viewBox="0 0 448 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
                />
              </svg>
               
              Release
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              December 17, 2019
            </div>
          </div>
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#FFFFFF"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#FFFFFF",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
                />
              </svg>
               
              Duration
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              141 minutes
            </div>
          </div>
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#21A453"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#21A453",
                  }
                }
                viewBox="0 0 288 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z"
                />
              </svg>
               
              Revenue
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              $956,030,690
            </div>
          </div>
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#fc3a52"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#fc3a52",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                />
              </svg>
               
              Votes
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              5.1 / 10
            </div>
          </div>
        </div>
        <div
          className="fj ep fk"
        >
          <h1
            className="g4 ce ag ah bo aj g5 g6 g7 g8 g9 ga gb gc"
          >
            Star Wars: The Rise of Skywalker
          </h1>
          <h2
            className="gd ag d5 bo do g5 ge g7 gf g9 gg gb gh"
          >
            Every generation has a legend
          </h2>
          <span
            aria-label="button"
            className="ag gi bo do d4 gj ct gk gl gm gn go ax g3 gp dr f1 ek gq gr gs gt gu gv gw f0 dz  "
            data-baseweb="tag"
            onClick={null}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              className="al ex ew gx"
              title="Action"
            >
              Action
            </span>
          </span>
          <span
            aria-label="button"
            className="ag gi bo do d4 gj ct gk gl gm gn go ax g3 gp dr f1 ek gq gr gs gt gu gv gw f0 dz  "
            data-baseweb="tag"
            onClick={null}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              className="al ex ew gx"
              title="Adventure"
            >
              Adventure
            </span>
          </span>
          <span
            aria-label="button"
            className="ag gi bo do d4 gj ct gk gl gm gn go ax g3 gp dr f1 ek gq gr gs gt gu gv gw f0 dz  "
            data-baseweb="tag"
            onClick={null}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              className="al ex ew gx"
              title="Science Fiction"
            >
              Science Fiction
            </span>
          </span>
          <div
            className="gy"
            data-baseweb="block"
          />
          <button
            className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag d5 bo do b8 ba b7 b9 es et gw f0 h0 h1 h2 h3 h4"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="aq h5"
            >
              <svg
                className="dg f4 h6 f1 f5"
                data-baseweb="icon"
                viewBox="0 0 24 24"
              >
                <title>
                  Plus
                </title>
                <path
                  clipRule="evenodd"
                  d="M12 5C12.5523 5 13 5.44772 13 6V11L18 11C18.5523 11 19 11.4477 19 12C19 12.5523 18.5523 13 18 13L13 13V18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18V13L6 13C5.44772 13 5 12.5523 5 12C5 11.4477 5.44771 11 6 11L11 11V6C11 5.44772 11.4477 5 12 5Z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            Watchlist
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Header Tv 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bb ax ak f9 fa fb fc fd fe ff"
    >
      <div
        className="aq"
      >
        <div
          className="dl ep fg ck fh"
        >
          <img
            alt="No poster"
            className="ak fi"
            data-baseweb="block"
            src="https://image.tmdb.org/t/p/w500/u3bZgnGQ9T01sWNhyveQz0wH0Hl.jpg"
          />
        </div>
        <div
          className="dl ep eq ck fh"
        />
        <div
          className="fj ep fk fl"
        >
          <div
            style={
              Object {
                "height": "100%",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": undefined,
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <div />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ak aq fm ek ax fn fo fp fq fr fs ft fu"
      >
        <div
          className="dl ep fv aq fw fx fy fz g0"
        >
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#f9b248"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#f9b248",
                  }
                }
                viewBox="0 0 448 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
                />
              </svg>
               
              Last air date
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              May 19, 2019
            </div>
          </div>
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#FFFFFF"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#FFFFFF",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
                />
              </svg>
               
              Episode runtime
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              60 minutes
            </div>
          </div>
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#21A453"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#21A453",
                  }
                }
                viewBox="0 0 640 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M592 0H48C21.5 0 0 21.5 0 48v320c0 26.5 21.5 48 48 48h245.1v32h-160c-17.7 0-32 14.3-32 32s14.3 32 32 32h384c17.7 0 32-14.3 32-32s-14.3-32-32-32h-160v-32H592c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zm-16 352H64V64h512v288z"
                />
              </svg>
               
              Number of seasons
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              8 season(s)
            </div>
          </div>
          <div
            className="g1 f8"
            data-baseweb="block"
          >
            <div
              className="g2 ag c7 d5 d6"
              data-baseweb="block"
            >
              <svg
                color="#fc3a52"
                fill="currentColor"
                height="0.8em"
                size="0.8em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": "#fc3a52",
                  }
                }
                viewBox="0 0 512 512"
                width="0.8em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                />
              </svg>
               
              Votes
            </div>
            <div
              className="g3 ag c7 d5 d6"
              data-baseweb="block"
            >
              8.2 / 10
            </div>
          </div>
        </div>
        <div
          className="fj ep fk"
        >
          <h1
            className="g4 ce ag ah bo aj g5 g6 g7 g8 g9 ga gb gc"
          >
            Game of Thrones
          </h1>
          <span
            aria-label="button"
            className="ag gi bo do d4 gj ct gk gl gm gn go ax g3 gp dr f1 ek gq gr gs gt gu gv gw f0 dz  "
            data-baseweb="tag"
            onClick={null}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              className="al ex ew gx"
              title="Sci-Fi & Fantasy"
            >
              Sci-Fi & Fantasy
            </span>
          </span>
          <span
            aria-label="button"
            className="ag gi bo do d4 gj ct gk gl gm gn go ax g3 gp dr f1 ek gq gr gs gt gu gv gw f0 dz  "
            data-baseweb="tag"
            onClick={null}
            onKeyDown={[Function]}
            role="button"
            tabIndex={null}
          >
            <span
              className="al ex ew gx"
              title="Drama"
            >
              Drama
            </span>
          </span>
          <div
            className="gy"
            data-baseweb="block"
          />
          <button
            className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag d5 bo do b8 ba b7 b9 es et gw f0 h0 h1 h2 h3 h4"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="aq h5"
            >
              <svg
                className="dg f4 h6 f1 f5"
                data-baseweb="icon"
                viewBox="0 0 24 24"
              >
                <title>
                  Plus
                </title>
                <path
                  clipRule="evenodd"
                  d="M12 5C12.5523 5 13 5.44772 13 6V11L18 11C18.5523 11 19 11.4477 19 12C19 12.5523 18.5523 13 18 13L13 13V18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18V13L6 13C5.44772 13 5 12.5523 5 12C5 11.4477 5.44771 11 6 11L11 11V6C11 5.44772 11.4477 5 12 5Z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
            Watchlist
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Hero Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ak"
    >
      <div
        className="c9 ak hh al"
      >
        <div
          className="ak ap c9 hi hj"
        />
        <div
          className="c9 cl cm cb hk hl"
        />
        <img
          alt="No poster"
          className="dh ak ap hm"
          src="https://image.tmdb.org/t/p/w500/9Vp8MKqrwRAtvACF7PBwbvdG4dq.jpg"
        />
        <img
          alt="No backdrop"
          className="ck fh hn ho"
          src="https://image.tmdb.org/t/p/original/zTxHf9iIOCqRbxvl8W5QYKrsMLq.jpg"
        />
      </div>
      <div
        className="aq ae hp fp fq hq hr hs"
      >
        <div
          className="ht hu ck al hv hw"
        >
          <img
            alt="No poster"
            className="ak fi"
            src="https://image.tmdb.org/t/p/w500/9Vp8MKqrwRAtvACF7PBwbvdG4dq.jpg"
          />
        </div>
        <div
          className="d3 aq d0"
        >
          <div
            className=""
          >
            <h2
              className="g4 ag cg bo c8 ce hx hy hz i0 i1"
            >
              Jumanji: The Next Level
            </h2>
            <h3
              className="gd ag cg bo c8 i2"
            >
              December 12, 2019
            </h3>
            <div
              className=""
            >
              <button
                className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag d5 bo do b8 ba b7 b9 es et gw f0 h0 h1 h2 h3 h4"
                data-baseweb="button"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="aq h5"
                >
                  <svg
                    className="dg f4 h6 f1 f5"
                    data-baseweb="icon"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      Plus
                    </title>
                    <path
                      clipRule="evenodd"
                      d="M12 5C12.5523 5 13 5.44772 13 6V11L18 11C18.5523 11 19 11.4477 19 12C19 12.5523 18.5523 13 18 13L13 13V18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18V13L6 13C5.44772 13 5 12.5523 5 12C5 11.4477 5.44771 11 6 11L11 11V6C11 5.44772 11.4477 5 12 5Z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
                Watchlist
              </button>
              <div
                className="i3 f7"
                data-baseweb="block"
              />
              <button
                className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag d5 bo do b8 ba b7 b9 es et gw f0 c5 i4 i5 i6 i7"
                data-baseweb="button"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="aq h5"
                >
                  <svg
                    className="dg f4 h6 f1 f5"
                    data-baseweb="icon"
                    viewBox="0 0 20 20"
                  >
                    <title>
                      Show
                    </title>
                    <path
                      d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                    />
                  </svg>
                </div>
                More Info
              </button>
            </div>
          </div>
          <div
            className="i8 aq i9 es ia ib"
          >
            <button
              className="cd ic bc ae id ie aw if ig"
              onClick={[Function]}
            >
              <div
                className="ak ap c9 hi ih"
              />
              <img
                alt="No backdrop"
                className="ak fi"
                src="https://image.tmdb.org/t/p/original/zTxHf9iIOCqRbxvl8W5QYKrsMLq.jpg"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
              onClick={[Function]}
            >
              <div
                className="ak ap c9 hi ii"
              />
              <img
                alt="No backdrop"
                className="ak fi"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
              onClick={[Function]}
            >
              <div
                className="ak ap c9 hi ii"
              />
              <img
                alt="No backdrop"
                className="ak fi"
                src="https://image.tmdb.org/t/p/w1280/aZ1ZqJ4uO1RK5gU5jRsO4qG7rJo.jpg"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
              onClick={[Function]}
            >
              <div
                className="ak ap c9 hi ii"
              />
              <img
                alt="No backdrop"
                className="ak fi"
                src="https://image.tmdb.org/t/p/w1280/n3UanIvmnBlH531pykuzNs4LbH6.jpg"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
              onClick={[Function]}
            >
              <div
                className="ak ap c9 hi ii"
              />
              <img
                alt="No backdrop"
                className="ak fi"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Hero Loading 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ak"
    >
      <div
        className="c9 ak hh al"
      >
        <div
          className="ak ap c9 hi hj"
        />
        <div
          className="c9 cl cm cb hk hl"
        />
      </div>
      <div
        className="aq ae hp fp fq hq hr hs"
      >
        <div
          className="ht hu ck al hv hw"
        >
          <div
            className="cp ak ap"
            data-baseweb="block"
          />
        </div>
        <div
          className="d3 aq d0"
        >
          <div
            className=""
          >
            <h2
              className="g4 ag cg bo c8 ce hx hy hz i0 i1"
            >
              <div
                className="cp he hf"
                data-baseweb="block"
              />
            </h2>
            <h3
              className="gd ag cg bo c8 i2"
            >
              <div
                className="cp hd hg"
                data-baseweb="block"
              />
            </h3>
          </div>
          <div
            className="i8 aq i9 es ia ib"
          >
            <button
              className="cd ic bc ae id ie aw if ig"
            >
              <div
                className="cp ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
            >
              <div
                className="cp ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
            >
              <div
                className="cp ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
            >
              <div
                className="cp ak ap"
                data-baseweb="block"
              />
            </button>
            <button
              className="cd ic bc ae id ie aw if ig"
            >
              <div
                className="cp ak ap"
                data-baseweb="block"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Review Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="f8"
      data-baseweb="block"
    >
      <div
        className="ij ik d7 dq bv bx"
      >
        <div
          className="cn ag bo d5 do"
          data-baseweb="typo-labelsmall"
        >
          Vogel
        </div>
        <p
          className="ag c6 c7 c8 g3 g5 il im in"
        >
          Well.. this was dull.
        </p>
        <button
          className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag c6 bo d6 b8 ba b7 b9 bw by bv bx cn cv ec io ee ip eg iq"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="ij ik d7 dq bv bx"
      >
        <div
          className="cn ag bo d5 do"
          data-baseweb="typo-labelsmall"
        >
          Olon
        </div>
        <p
          className="ag c6 c7 c8 g3 g5 il im in"
        >
          Went to the first showing in town tonight.  I really enjoyed the film.  Although it leaned heavy on nostalgia, it should, since it is wrapping up 40 years.  I did not care for The Last Jedi, and was worried going in.  Will do a deeper dive after I have seen it a few times.
        </p>
        <button
          className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag c6 bo d6 b8 ba b7 b9 bw by bv bx cn cv ec io ee ip eg iq"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="ij ik d7 dq bv bx"
      >
        <div
          className="cn ag bo d5 do"
          data-baseweb="typo-labelsmall"
        >
          Sheldon Nylander
        </div>
        <p
          className="ag c6 c7 c8 g3 g5 il im in"
        >
          It’s hard to write a review for this film without any major spoilers, so this might seem a little vague here and there. There will be very minor spoilers, primarily what’s revealed in the opening text crawl or the trailers, so not much, but if you want to go into this film completely virgin, stop here.
        </p>
        <button
          className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag c6 bo d6 b8 ba b7 b9 bw by bv bx cn cv ec io ee ip eg iq"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="ij ik d7 dq bv bx"
      >
        <div
          className="cn ag bo d5 do"
          data-baseweb="typo-labelsmall"
        >
          Luis_989
        </div>
        <p
          className="ag c6 c7 c8 g3 g5 il im in"
        >
          When The Force Awakens was released the vast majority of fans liked it. They were practically watching a remake of A New Hope but it was enough for them. Although they never liked Rey. That damn feminist agenda right?
        </p>
        <button
          className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag c6 bo d6 b8 ba b7 b9 bw by bv bx cn cv ec io ee ip eg iq"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          Read more
        </button>
      </div>
      <div
        className="ir is d7 dq bv bx"
      >
        <div
          className="cn ag bo d5 do"
          data-baseweb="typo-labelsmall"
        >
          msbreviews
        </div>
        <p
          className="ag c6 c7 c8 g3 g5 il im in"
        >
          If you enjoy reading my Spoiler-Free reviews, please follow my blog @

        </p>
        <button
          className="dr d4 ds ay az b0 dt du dv dw dx dy dz e0 e1 e2 e3 bc e4 gz e6 br bs bt e7 ag c6 bo d6 b8 ba b7 b9 bw by bv bx cn cv ec io ee ip eg iq"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          Read more
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;
